chore: clean up StreamAPIUp++